# minimal-test

./: CMakeLists.txt  README.md  downloadx.patch  helloworld.bb  minimal.bb  minimal.cc
